--- a/src/css/MyInfoDeco.scss
+++ b/src/css/MyInfoDeco.scss
@@ -1,39 +1,35 @@
-.MyInfo-header__icon{
+.screen-header__icon{
     display: flex;
     justify-content: space-between;
 }
 
-.MyInfo-header__icon__bad{
+.screen-header__icon__bad{
     margin-top: 1rem;
     margin-left: 18rem;
 }
 
-.MyInfo-header__icon__menu{
+.screenheader__icon__menu{
     margin-top: 1rem;
     margin-left: 23rem;
 }
 
-.MyInfo-header__name {
+.screen-header__name {
     display: flex;
     align-items: center;
     margin-top: 4.5rem;
     margin-left: -80rem;
     width: 80%;
-    gap: 0.6rem;
     font-size: 4rem;
 }
 
-.MyInfo-header__name__deco {
+.screen-header__name__deco {
     background-color: #35d897; 
     width: 16rem;
     height: 8rem;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 20%;
-    border-bottom-right-radius: 20%;
+    border-radius: 0 45px 45px 0;
 }
 
-.MyInfo-container__profile{
+.myInfo-container__profile{
     display:flex;
     gap: 500px;
     margin-left: 1rem;    
@@ -43,11 +39,11 @@
     font-size: 2rem;
 }
 
-.MyInfo-container__profile__user{
+.myInfo-container__profile__user{
     margin-left:18rem;
 }
 
-.MyInfo-container__basic {
+.myInfo-container__basic {
     background-color: #f0f0f0;  
     border-radius: 12px;            
     margin-top: 1.5rem;
@@ -57,35 +53,35 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
-#BasicInfo-txt {
+.basicInfo-txt {
     margin: 0 0 0.5rem 0;
     font-weight: bold;
     font-size: 1rem;
     color: #333;
 }
 
-.MyInfo-container__basic ul {
+.myInfo-container__basic__area {
     margin: 0;
     padding: 1rem;
     padding-left: 2rem;
     margin-right: 2rem;
 }
 
-.MyInfo-container__basic li {
+.myInfo-container__basic li {
     display: flex;
     justify-content: space-between; 
     align-items: center;
     padding: 0.4rem 0;
 }
 
-.MyInfo-container__basic img {
+.myInfo-container__basicImg {
     vertical-align: middle;
     margin-left: 6px;
     width: 24px;
     height: auto;
 }
 
-.MyInfo-container__Team {
+.myInfo-container__team {
     background-color: #f0f0f0;  
     border-radius: 12px;            
     margin-top: 1.5rem;
@@ -95,35 +91,35 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
-#TeamInfo-txt {
+.teamInfo-txt {
     margin: 0 0 0.5rem 0;
     font-weight: bold;
     font-size: 1rem;
     color: #333;
 }
 
-.MyInfo-container__Team ul {
+.myInfo-container__team__area {
     margin: 0;
     padding: 1rem;
     padding-left: 2rem;
     margin-right: 2rem;
 }
 
-.MyInfo-container__Team li {
+.basic__info {
     display: flex;
     justify-content: space-between; 
     align-items: center;
     padding: 0.4rem 0;
 }
 
-.MyInfo-container__Team img {
+.myInfo-container__teamImg {
     vertical-align: middle;
     margin-left: 6px;
     width: 24px;
     height: auto;
 }
 
-.rank-navigation {
+.myInfo-navigation {
     background-color: #35d897;
     display:flex;
     box-shadow: 0 5px 5px 0 gray;    
@@ -132,17 +128,13 @@
     margin-right: 18rem;
     border: 1px solid rgba(101, 101, 101, 0.454);
     border-radius: 15px;    
-    bottom: 5px;
-    left: 5px;
-    right: 5px;
-    height: 45px;
 }
 
-.rank-navigation_comp {  
+.screen-navigation_comp { 
     color:#1f1f1f;
     text-decoration: none;
     text-align: center;
+    padding-top: 20px;
     width: 20%;
-    height: 45px;
-    line-height: 45px;
+    height: 35px;
 }
