--- a/src/css/RankingDeco.scss
+++ b/src/css/RankingDeco.scss
@@ -1,35 +1,31 @@
-.rank-header__icon{
+.screen-header__icon{
     display: flex;
     justify-content: space-between;
 }
 
-.rank-header__icon__bad{
+.screen-header__icon__bad{
     margin-top: 1rem;
     margin-left: 18rem;
 }
 
-.rank-header__icon__menu{
+.screen-header__icon__menu{
     margin-top: 1rem;
     margin-left: 23rem;
 }
 
-.rank-header__name {
+.screen-header__name {
     display: flex;
     align-items: center;
     margin-left: -80rem;
     width: 80%;
-    gap: 0.6rem;
     font-size: 4rem;
 }
 
-.rank-header__name__deco {
+.screen-header__name__deco {
     background-color: #35d897; 
     width: 16rem;
     height: 8rem;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 20%;
-    border-bottom-right-radius: 20%;
+    border-radius: 0 45px 45px 0;
 }
 
 .rank-container__total {
@@ -45,19 +41,19 @@
     gap: 10px; 
 }
 
-.rank-container__total p{
+.rank-container__total__info{
     color:#b2b8b8;
     padding-left: 2rem;
     font-size: 1.2rem;
 }
 
-.rank-container__total img {
+.rank-container__total__comp{
     background-color:#282929;
     padding-left: 3rem;
     padding-right: 5rem;
 }
 
-.rank-container__list ol {
+.rank-container__list__main {
     margin-left: 18rem;
     margin-right: 18rem;
     padding: 0;
@@ -70,27 +66,23 @@
     padding: 8px 0;
 }
 
-.rank-container__list__number img {
+.rank-container__list__numberImg {
     display: block;
     padding-left: 20px;
     width: 5%;
 }
 
-.rank-container__list__UserName {
+.rank-container__list__userName {
     flex: 1; 
     padding-left: 50px;
     font-weight: bold;
 }
 
-.rank-container__list__Record,
-.rank-container__list__TotalRecord {
+.rank-container__list__record,
+.rank-container__list__totalRecord {
     min-width: 100px; 
     text-align: center;
 }
-
-
-
-
 
 
 .rank-navigation {
@@ -102,17 +94,13 @@
     margin-right: 12rem;
     border: 1px solid rgba(101, 101, 101, 0.454);
     border-radius: 15px;    
-    bottom: 5px;
-    left: 5px;
-    right: 5px;
-    height: 45px;
 }
 
-.rank-navigation_comp {
+.screen-navigation_comp {
     color:#1f1f1f;
     text-decoration: none;
     text-align: center;
+    padding-top: 20px;
     width: 20%;
-    height: 45px;
-    line-height: 45px;
+    height: 35px;
 }
